--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -24,17 +24,16 @@ jobs:
 
     - name: Bootstrap nob build system
       run: |
-        mkdir build
         if [ "${{ matrix.os }}" == "windows-latest" ]; then
           cl.exe /Fe:nob.exe nob.c
         else
-          gcc nob.c -o dwoc
+          gcc nob.c -o nob
         fi
 
     - name: Build dwoc
       run: |
         if [ "${{ matrix.os }}" == "windows-latest" ]; then
-          ./nob.exe
+          .\nob.exe
         else
           ./nob
         fi
