--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -11,8 +11,9 @@ jobs:
     name: Build for ${{ matrix.os }}
     runs-on: ${{ matrix.os }}
     strategy:
-      matrix:
-        os: [ubuntu-latest, windows-latest] # If you want Mac make a PR
+      matrix: # If you want Mac make a PR
+        os: [windows-latest]
+        # os: [ubuntu-latest, windows-latest] # Ubuntu disabled until build is fixed
 
     steps:
     - name: Checkout code
