--- a/.github/workflows/compile.yml
+++ b/.github/workflows/compile.yml
@@ -1,10 +1,9 @@
-name: Build and Release dwoc
+name: Build and Release Compiler
 
 on:
   push:
     tags:
       - 'v*' # Trigger on tags starting with v
-  workflow_dispatch: # Allows manual triggering
 
 jobs:
   build:
@@ -12,8 +11,7 @@ jobs:
     runs-on: ${{ matrix.os }}
     strategy:
       matrix: # If you want Mac make a PR
-        os: [windows-latest]
-        # os: [ubuntu-latest, windows-latest] # Ubuntu disabled until build is fixed
+        os: [ubuntu-latest, windows-latest]
 
     steps:
     - name: Checkout code
@@ -27,7 +25,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: cl.exe /Fe:nob.exe nob.c
 
-    - name: Bootstrap nob build system (Ubuntu)
+    - name: Bootstrap nob build system (Linux)
       if: matrix.os != 'windows-latest'
       run: gcc nob.c -o nob
 
@@ -35,7 +33,7 @@ jobs:
       if: matrix.os == 'windows-latest'
       run: .\nob.exe
 
-    - name: Build dwoc (Ubuntu)
+    - name: Build dwoc (Linux)
       if: matrix.os != 'windows-latest'
       run: ./nob
 
@@ -51,7 +49,6 @@ jobs:
     name: Create Release
     needs: build
     runs-on: ubuntu-latest
-    if: github.ref == 'refs/heads/main' && always() # Ensure release runs if build was triggered on main
 
     steps:
     - name: Download all build artifacts
@@ -59,12 +56,27 @@ jobs:
       with:
         path: artifacts
 
-    - name: Create GitHub Release
+    - name: Create GitHub release
+      uses: actions/create-release@v1
       id: create_release
+      with:
+        draft: false
+        prerelease: false
+        release_name: ${{ steps.version.outputs.version }}
+        tag_name: ${{ github.ref }}
+        body_path: CHANGELOG.md
+      env:
+        GITHUB_TOKEN: ${{ github.token }}
+
+    - name: Upload artifacts
+      id: upload_artifact
       uses: softprops/action-gh-release@v2
       env:
-        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+        GITHUB_TOKEN: ${{ github.token }}
       with:
+        upload_url: ${{ steps.create_release.outputs.upload_url }}
+        prelease: true
+        generate_release_notes: true
         files: |
-          artifacts/*/dwoc
-          artifacts/*/dwoc.exe # This will upload the windows executable when it exists
+          artifacts/dwoc-*
+          README
